--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1 {
     font-size: 50px;
+}
+
+p {
+    color: dimgray;
 }
 
 .name_title {
@@ -36,4 +41,9 @@ section {
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 5px;
+}
+
+.sec1 {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
